--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "immer": "^10.0.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-code-push": "^8.2.1"
